--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -84,7 +84,7 @@
 <body>
     <div class="mother">
         <div class="options">
-            <a href="layout.ejs" class="web-design" href><button id="btn" class="web-design"><div class="web-design1" id="">Web design</div></button></a>
+            <a href="..layout.ejs" class="web-design" href><button id="btn" class="web-design"><div class="web-design1" id="">Web design</div></button></a>
             <a href="project1.ejs" class="web-design" href><button id="btn" class="web-design"><div class="web-design1" id="">Web design</div></button></a>
             <a class="web-design" href><button id="btn" class="web-design"><div class="web-design1" id="">Web design</div></button></a>
             <a class="web-design" href><button id="btn" class="web-design"><div class="web-design1" id="">Web design</div></button></a>
